@@ -296,13 +296,9 @@ class _CourseList extends ObjList
 	 * Returns FALSE if no matches were found, else it will 
 	 * return the matched Course object.
 	 * 
-	 * @param Course $course_c
-	 * @param string $min_grade
-	 * @param bool $bool_mark_repeats_exclude
-	 * 
 	 * @return Course
 	 */
-	function find_most_recent_match(Course $course_c, $min_grade = "", $bool_mark_repeats_exclude = false, $degree_id = 0, $bool_skip_already_assigned_to_degree = TRUE, $bool_skip_subs = FALSE)
+	function find_most_recent_match(Course $course_c, $min_grade = "", $bool_mark_repeats_exclude = false, $degree_id = 0, $bool_skip_already_assigned_to_degree = TRUE, $bool_skip_subs = FALSE, $group_id = 0)
 	{
 		// Get a list of all matches to courseC, and
 		// then order them by the most recently taken course
@@ -403,11 +399,9 @@ class _CourseList extends ObjList
           }        
         }
         
-        //fpm("[DID meet min grade req of $min_grade :: $c->subject_id $c->course_num $c->grade");
       }
 
 			// Has the course already been assigned [to this degree]?
-			//if ($c->bool_has_been_assigned)
 			if ($bool_skip_already_assigned_to_degree && $c->get_has_been_assigned_to_degree_id($degree_id)) {
 			  // Yes, it's been assigned, so we can just skip it.
 				continue;
@@ -417,7 +411,7 @@ class _CourseList extends ObjList
       // At this point, we are going to invoke a hook, to give add-on modules
       // one last chance to "skip" the course or not.
       $bool_can_proceed = TRUE;
-      $result = invoke_hook("courselist_find_match_allow_course", array($c, $course_c, $list_matches, $degree_id));
+      $result = invoke_hook("courselist_find_match_allow_course", array($c, $course_c, $list_matches, $degree_id, $group_id));
       foreach ($result as $m => $val) {
         // If *any* module said FALSE, then we must skip this course and not assign it to this degree.
         if ($val === FALSE) $bool_can_proceed = $val;
@@ -449,13 +443,10 @@ class _CourseList extends ObjList
    * Returns FALSE if no matches were found, else it will 
    * return the matched Course object.
    * 
-   * @param Course $course_c
-   * @param string $min_grade
-   * @param bool $bool_mark_repeats_exclude
    * 
    * @return Course
    */
-  function find_best_grade_match(Course $course_c, $min_grade = "", $bool_mark_repeats_exclude = false, $degree_id = 0, $bool_skip_already_assigned_to_degree = TRUE, $bool_skip_subs = FALSE)
+  function find_best_grade_match(Course $course_c, $min_grade = "", $bool_mark_repeats_exclude = false, $degree_id = 0, $bool_skip_already_assigned_to_degree = TRUE, $bool_skip_subs = FALSE, $group_id = 0)
   {
     
         
@@ -560,14 +551,13 @@ class _CourseList extends ObjList
           }        
         }        
         
-        //fpm("[DID meet min grade req of $min_grade :: $c->subject_id $c->course_num $c->grade");
       }
 
 
       // At this point, we are going to invoke a hook, to give add-on modules
       // one last chance to "skip" the course or not.
       $bool_can_proceed = TRUE;
-      $result = invoke_hook("courselist_find_match_allow_course", array($c, $course_c, $list_matches, $degree_id));
+      $result = invoke_hook("courselist_find_match_allow_course", array($c, $course_c, $list_matches, $degree_id, $group_id));
       foreach ($result as $m => $val) {
         // If *any* module said FALSE, then we must skip this course and not assign it to this degree.
         if ($val === FALSE) $bool_can_proceed = $val;
@@ -1553,13 +1543,10 @@ class _CourseList extends ObjList
 	 * most recent that meets the minimum requirements.
 	 * Other schools might simply take the best grade.
 	 *
-	 * @param Course $course_c
-	 * @param string $min_grade
-	 * @param bool $bool_mark_repeats_exclude
 	 *
 	 * @return Course
 	 */
-	function find_best_match(Course $course_c, $min_grade = "", $bool_mark_repeats_exclude = false, $degree_id = 0, $bool_skip_already_assigned_to_degree = TRUE, $bool_skip_subs = FALSE)
+	function find_best_match(Course $course_c, $min_grade = "", $bool_mark_repeats_exclude = false, $degree_id = 0, $bool_skip_already_assigned_to_degree = TRUE, $bool_skip_subs = FALSE, $group_id = 0)
 	{
     $rtn = FALSE;
     
@@ -1570,12 +1557,11 @@ class _CourseList extends ObjList
     
     if ($course_repeat_policy == "best_grade_exclude_others") {
       // Search for best grade, exclude other attempts.
-      $rtn = $this->find_best_grade_match($course_c, $min_grade, TRUE, $degree_id, $bool_skip_already_assigned_to_degree, $bool_skip_subs);
+      $rtn = $this->find_best_grade_match($course_c, $min_grade, TRUE, $degree_id, $bool_skip_already_assigned_to_degree, $bool_skip_subs, $group_id);
     }
     else {
-      // Search for most recent first, possibly mark previous as excluded.
-      
-		  $rtn = $this->find_most_recent_match($course_c, $min_grade, $bool_mark_repeats_exclude, $degree_id, $bool_skip_already_assigned_to_degree, $bool_skip_subs);
+      // Search for most recent first, possibly mark previous as excluded.      
+		  $rtn = $this->find_most_recent_match($course_c, $min_grade, $bool_mark_repeats_exclude, $degree_id, $bool_skip_already_assigned_to_degree, $bool_skip_subs, $group_id);
     }
 
     return $rtn;
